--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
     "date-fns": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.544.0",
-    "next": "latest",
+    "next": "^16.0.8",
     "nodemailer": "^7.0.10",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.65.0",
     "tailwind-merge": "^3.3.1",
     "uuid": "^13.0.0",
@@ -57,7 +57,7 @@
     "@types/react-dom": "^19",
     "@types/uuid": "^10.0.0",
     "eslint": "^9",
-    "eslint-config-next": "latest",
+    "eslint-config-next": "^16.0.8",
     "prisma": "^5.22.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
